<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/revels_grey"
    tools:context="in.revels.revels.activities.EasterEggActivity">

    <LinearLayout
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/revels_grey_dark"
        android:layout_marginBottom="12dp"
        android:paddingTop="@dimen/padding_2x">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lug_and_sc"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginBottom="@dimen/padding_half"
            android:paddingLeft="@dimen/padding_half"
            android:paddingRight="@dimen/padding_half"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/amber" />
    </LinearLayout>

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/qnax_zrzf_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_default"
            android:paddingRight="@dimen/padding_default">

            <ViewFlipper
                android:id="@+id/easter_egg_view_flipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/qnax_1"
                    android:layout_gravity="center"/>

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/qnax_2"
                    android:layout_gravity="center"/>

            </ViewFlipper>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qnax"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginTop="12dp"/>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/revels_grey_dark"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/padding_default"
        android:layout_gravity="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/amber" />

        <ImageView
            android:id="@+id/lug_tux"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/lugtux"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_default"/>

        <TextView
            android:id="@+id/lug_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lugm_website"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/padding_half"
            android:layout_marginTop="@dimen/padding_half">

            <ImageView
                android:id="@+id/lug_fb_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_lug_fb"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/lug_fb_link"
                android:autoLink="web"
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lug_fb"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/lug_github_icon"
                android:layout_width="24dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_github"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="@dimen/padding_default"
                android:layout_marginLeft="@dimen/padding_default"/>

            <TextView
                android:id="@+id/lug_github_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lug_github"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
