<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/padding_default"
    android:paddingRight="@dimen/padding_default"
    android:paddingTop="@dimen/padding_default"
    android:paddingBottom="@dimen/padding_half"
    android:background="?android:attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_events"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"/>

        <LinearLayout
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:background="@drawable/blue_grey_rounded_bg">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_cross"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:tint="@color/white"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_filters"
                android:textSize="13sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textAllCaps="true"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:layout_marginTop="@dimen/padding_default"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/filter_start_time_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/padding_default"
                android:paddingBottom="@dimen/padding_default"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_time"
                    android:alpha="0.54"
                    android:layout_marginRight="@dimen/padding_2x"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_start_time"
                    android:textSize="@dimen/typography_subheading"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/padding_half"/>

                <LinearLayout
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/start_time_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/typography_subheading"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/default_start_time"/>

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/ic_drop_down"
                        android:alpha="0.54"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_end_time_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/padding_default"
                android:paddingBottom="@dimen/padding_default"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_time"
                    android:alpha="0.54"
                    android:scaleX="-1"
                    android:layout_marginRight="@dimen/padding_2x"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_end_time"
                    android:textSize="@dimen/typography_subheading"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/padding_half"/>

                <LinearLayout
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/end_time_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/typography_subheading"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/default_start_time"/>

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/ic_drop_down"
                        android:alpha="0.54"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/padding_default"
                android:paddingBottom="@dimen/padding_default"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_event_type"
                    android:alpha="0.54"
                    android:layout_marginRight="@dimen/padding_2x"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_event_type"
                    android:textSize="@dimen/typography_subheading"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/padding_half"/>

                <Spinner
                    android:layout_weight="0"
                    android:id="@+id/event_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/padding_default"
                android:paddingBottom="@dimen/padding_half"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_venue"
                    android:alpha="0.54"
                    android:layout_marginRight="@dimen/padding_2x"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_event_venue"
                    android:textSize="@dimen/typography_subheading"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/padding_half"/>

                <Spinner
                    android:layout_weight="0"
                    android:id="@+id/event_venue_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|right|center_vertical">

        <TextView
            android:id="@+id/filter_cancel_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/no"
            android:textAllCaps="true"
            android:textSize="@dimen/typography_body"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:padding="@dimen/padding_half"
            android:layout_marginRight="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"/>

        <TextView
            android:id="@+id/filter_apply_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_filter"
            android:textAllCaps="true"
            android:textSize="@dimen/typography_body"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:padding="@dimen/padding_half"/>


    </LinearLayout>

</LinearLayout>