<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/category_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/padding_default">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="bottom"
                android:paddingTop="18dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/padding_default"
                android:paddingRight="@dimen/padding_default"
                android:textSize="@dimen/typography_title"
                android:background="?android:attr/selectableItemBackground"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/category_day_1_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_2"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="bottom"
                android:paddingTop="18dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/padding_default"
                android:paddingRight="@dimen/padding_default"
                android:textSize="@dimen/typography_title"
                android:background="?android:attr/selectableItemBackground"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/category_day_2_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_3"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="bottom"
                android:paddingTop="18dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/padding_default"
                android:paddingRight="@dimen/padding_default"
                android:textSize="@dimen/typography_title"
                android:background="?android:attr/selectableItemBackground"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/category_day_3_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_4"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="bottom"
                android:paddingTop="18dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/padding_default"
                android:paddingRight="@dimen/padding_default"
                android:textSize="@dimen/typography_title"
                android:background="?android:attr/selectableItemBackground"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/category_day_4_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"/>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>